# RipautoMemo

./: LICENSE  Pipfile  pyproject.toml  readme.md  readme_jp.md  ripauto_memo.py  ripauto_note.py
.github/ISSUE_TEMPLATE/: bug_report.md
css/: memo.css  search.css
html/: memo.html  search.html
html/css/: search.css
html/js/: memo.js  search.js
js/: common.js  memo.js  search.js
src/: config.py  controller.py  domain.py
src/service/: db.py  watch.py
