[tool.poetry.dev-dependencies]
black = "^22.3.0"
pyproject-flake8 = "^0.0.1a4"
mypy = "^0.960"
isort = "^5.10.1"
pre-commit = "^2.19.0"
flake8-bugbear = "^22.4.25"

# Following configurations are added manually

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.mypy]
# common
python_version = "3.10"
show_column_numbers  = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119